--- a/source/index.html
+++ b/source/index.html
@@ -15,30 +15,28 @@
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__list">
-            <li class="main-nav__item main-nav__item--active">
-              <a>
-                Главная
-              </a>
-            </li>
-            <li class="main-nav__item">
-              <a class="main-nav__item-link" href="photo.html">
-                Фото и видео
-              </a>
-            </li>
-            <li class="main-nav__item">
-              <a class="main-nav__item-link" href="form.html">
-                Форма отзыва
-              </a>
-            </li>
-            <li class="main-nav__item">
-              <a class="main-nav__item-link" href="#">
-                HTML Academy
-              </a>
-            </li>
-          </ul>
-        </div>
+        <ul class="main-nav__list">
+          <li class="main-nav__item">
+            <a class="main-nav__item-link">
+              Главная
+            </a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__item-link" href="photo.html">
+              Фото и видео
+            </a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__item-link" href="form.html">
+              Форма отзыва
+            </a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__item-link" href="#">
+              HTML Academy
+            </a>
+          </li>
+        </ul>
       </nav>
     </header>
     <main class="page-main">
@@ -94,7 +92,7 @@
             </p>
           </li>
         </ul>
-        <div class="features-numbered features-numbered--accent">
+        <div class="features-numbered features-numbered--accent features-numbered--reverse">
           <div class="features-numbered__text">
             <h3 class="features-numbered__title">
               Там есть Мост Дьявола
