--- a/source/photo.html
+++ b/source/photo.html
@@ -15,30 +15,28 @@
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__list">
-            <li class="main-nav__item">
-              <a class="main-nav__item-link" href="index.html">
-                Главная
-              </a>
-            </li>
-            <li class="main-nav__item main-nav__item--active">
-              <a>
-                Фото и видео
-              </a>
-            </li>
-            <li class="main-nav__item">
-              <a class="main-nav__item-link" href="form.html">
-                Форма отзыва
-              </a>
-            </li>
-            <li class="main-nav__item">
-              <a class="main-nav__item-link" href="#">
-                HTML Academy
-              </a>
-            </li>
-          </ul>
-        </div>
+        <ul class="main-nav__list">
+          <li class="main-nav__item">
+            <a class="main-nav__item-link" href="index.html">
+              Главная
+            </a>
+          </li>
+          <li class="main-nav__item main-nav__item--active">
+            <a class="main-nav__item-link">
+              Фото и видео
+            </a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__item-link" href="form.html">
+              Форма отзыва
+            </a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__item-link" href="#">
+              HTML Academy
+            </a>
+          </li>
+        </ul>
       </nav>
     </header>
     <main class="page-main">
@@ -55,8 +53,8 @@
       <section class="photo">
         <div class="photo-card photo-card--main">
           <figure class="photo__container">
-            <img src="img/photo-sunset-mobile@1x.jpg" width="280" height="280" alt="Неродные просторы">
-            <figcaption>
+            <img class="photo__container-image" src="img/photo-sunset-mobile@1x.jpg" alt="Неродные просторы">
+            <figcaption class="photo__container-text">
               <div class="photo__description">
                 <p class="photo__title">Неродные просторы</p>
                 <p class="photo__author">Автор фото: Борис</p>
@@ -67,10 +65,10 @@
             </figcaption>
           </figure>
         </div>
-        <div class="photo-card photo-card--secondary">
+        <div class="photo-card">
           <figure class="photo__container">
-            <img src="img/photo-cactus-mobile@1x.jpg" width="280" height="280" alt="Местная растительность">
-            <figcaption>
+            <img src="img/photo-cactus-mobile@1x.jpg" alt="Местная растительность">
+            <figcaption class="photo__container-text">
               <div class="photo__description">
                 <p class="photo__title">Местная растительность</p>
                 <p class="photo__author">Автор фото: Сергей</p>
@@ -81,10 +79,10 @@
             </figcaption>
           </figure>
         </div>
-        <div class="photo-card photo-card--secondary">
+        <div class="photo-card">
           <figure class="photo__container">
-            <img src="img/photo-roads-mobile@1x.jpg" width="280" height="280" alt="Дорога на север">
-            <figcaption>
+            <img src="img/photo-roads-mobile@1x.jpg" alt="Дорога на север">
+            <figcaption class="photo__container-text">
               <div class="photo__description">
                 <p class="photo__title">Дорога на север</p>
                 <p class="photo__author">Автор фото: Петр</p>
@@ -95,10 +93,10 @@
             </figcaption>
           </figure>
         </div>
-        <div class="photo-card photo-card--secondary">
+        <div class="photo-card">
           <figure class="photo__container">
-            <img src="img/photo-bridge-mobile@1x.jpg" width="280" height="280" alt="Мост дьявола">
-            <figcaption>
+            <img src="img/photo-bridge-mobile@1x.jpg" alt="Мост дьявола">
+            <figcaption class="photo__container-text">
               <div class="photo__description">
                 <p class="photo__title">Мост дьявола</p>
                 <p class="photo__author">Автор фото: Антон</p>
