--- a/source/photo.html
+++ b/source/photo.html
@@ -119,9 +119,9 @@
         </div>
         <div class="video__container">
           <img class="video__image" src="img/video-mobile@1x.jpg" width="320" height="201" alt="Видеопрезентация">
-          <div class="video-controls video-controls__panel">
-            <div class="video-controls__scale"></div>
-            <div class="video-controls__buttons"></div>
+          <div class="video__controls video__controls-panel">
+            <div class="video__controls-scale"></div>
+            <div class="video__controls-buttons"></div>
           </div>
         </div>
       </section>
