--- a/source/form.html
+++ b/source/form.html
@@ -11,7 +11,7 @@
       <a class="page-header__logo" href="index.html">
         <img src="img/logo-sedona-mobile.svg" width="102" height="84" alt="Седона">
       </a>
-      <nav class="main-nav main-nav--opened main-nav--nojs">
+      <nav class="main-nav main-nav--nojs">
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
@@ -70,7 +70,7 @@
               </p>
           </fieldset>
           <fieldset class="review-form__fieldset review-form__fieldset--contacts">
-            <h2 class="review-form__title review-form__decorated">Контактная информация:</h2>
+            <h2 class="review-form__title review-form__title--decorated">Контактная информация:</h2>
             <div class="review-form__wrapper review-form__wrapper--contacts">
               <p class="review-form__item review-form__item--contacts">
                 <label class="review-form__label" for="phone">Контактный телефон*:</label>
@@ -120,7 +120,7 @@
             </ul>
           </fieldset>
           <fieldset class="review-form__fieldset">
-            <h2 class="review-form__title review-form__decorated">Посещенные достопримечательности:</h2>
+            <h2 class="review-form__title review-form__title--decorated">Посещенные достопримечательности:</h2>
             <ul class="review-form__wrapper review-form__wrapper--sights">
               <li class="review-form__item review-form__item--sights">
                 <input class="review-form__checkbox visually-hidden" type="checkbox" name="devil-bridge" id="devil-bridge">
