--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,7 @@
       <a class="page-header__logo">
         <img src="img/logo-sedona-mobile.svg" width="102" height="84" alt="Седона">
       </a>
-      <nav class="main-nav main-nav--opened main-nav--nojs">
+      <nav class="main-nav main-nav--nojs">
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
