--- a/source/photo.html
+++ b/source/photo.html
@@ -80,7 +80,7 @@
         </div>
         <div class="photo-card">
           <figure class="photo__container">
-            <img src="img/photo-cactus-mobile@1x.jpg" alt="Местная растительность">
+            <img class="photo__container-image" src="img/photo-cactus-mobile@1x.jpg" alt="Местная растительность">
             <figcaption class="photo__container-text">
               <div class="photo__description">
                 <p class="photo__title">Местная растительность</p>
@@ -105,7 +105,7 @@
         </div>
         <div class="photo-card">
           <figure class="photo__container">
-            <img src="img/photo-roads-mobile@1x.jpg" alt="Дорога на север">
+            <img class="photo__container-image" src="img/photo-roads-mobile@1x.jpg" alt="Дорога на север">
             <figcaption class="photo__container-text">
               <div class="photo__description">
                 <p class="photo__title">Дорога на север</p>
@@ -130,7 +130,7 @@
         </div>
         <div class="photo-card">
           <figure class="photo__container">
-            <img src="img/photo-bridge-mobile@1x.jpg" alt="Мост дьявола">
+            <img class="photo__container-image" src="img/photo-bridge-mobile@1x.jpg" alt="Мост дьявола">
             <figcaption class="photo__container-text">
               <div class="photo__description">
                 <p class="photo__title">Мост дьявола</p>
@@ -167,7 +167,7 @@
           <img class="video__image" src="img/video-mobile@1x.jpg" width="320" height="201" alt="Видеопрезентация">
           <div class="video__controls video__controls-panel">
             <div class="video__controls-scale">
-              <div class="video__controls-pointer"></div>
+              <button class="video__controls-pointer"></button>
             </div>
               <button class="video__controls-button video__controls-button--replay" type="button">
                 <svg class="video__controls-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.0" id="Layer_1" x="0px" y="0px" width="16px" height="20px" viewBox="0 0 16 20" enable-background="new 0 0 16 20" xml:space="preserve">
@@ -239,5 +239,6 @@
         </a>
       </div>
     </footer>
+    <script src="js/script__nav.js"></script>
   </body>
 </html>
