--- a/source/form.html
+++ b/source/form.html
@@ -9,7 +9,11 @@
   <body class="page__body">
     <header class="page-header">
       <a class="page-header__logo" href="index.html">
-        <img src="img/logo-sedona-mobile.svg" width="102" height="84" alt="Седона">
+        <picture>
+          <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+          <img src="img/logo-sedona-mobile.svg" alt="Седона">
+        </picture>
       </a>
       <nav class="main-nav main-nav--nojs">
         <button class="main-nav__toggle" type="button">
