--- a/source/photo.html
+++ b/source/photo.html
@@ -9,7 +9,11 @@
   <body class="page__body">
     <header class="page-header">
       <a class="page-header__logo" href="index.html">
-        <img src="img/logo-sedona-mobile.svg" width="102" height="84" alt="Седона">
+        <picture>
+          <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+          <img src="img/logo-sedona-mobile.svg" alt="Седона">
+        </picture>
       </a>
       <nav class="main-nav main-nav--nojs">
         <button class="main-nav__toggle" type="button">
@@ -55,7 +59,11 @@
       <section class="photo">
         <div class="photo-card photo-card--main">
           <figure class="photo__container">
-            <img class="photo__container-image" src="img/photo-sunset-mobile@1x.jpg" alt="Неродные просторы">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@1x.jpg 1x, img/photo-sunset-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.jpg 1x, img/photo-sunset-tablet@2x.jpg 2x">
+              <img class="photo__container-image" src="img/photo-sunset-mobile@1x.jpg" srcset="img/photo-sunset-mobile@2x.jpg 2x" alt="Неродные просторы">
+            </picture>
             <figcaption class="photo__container-text">
               <div class="photo__description">
                 <p class="photo__title">Неродные просторы</p>
@@ -80,7 +88,11 @@
         </div>
         <div class="photo-card">
           <figure class="photo__container">
-            <img class="photo__container-image" src="img/photo-cactus-mobile@1x.jpg" alt="Местная растительность">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@1x.jpg 1x, img/photo-cactus-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/photo-cactus-tablet@1x.jpg 1x, img/photo-cactus-tablet@2x.jpg 2x">
+              <img class="photo__container-image" src="img/photo-cactus-mobile@1x.jpg" srcset="img/photo-cactus-mobile@2x.jpg 2x" alt="Местная растительность">
+            </picture>
             <figcaption class="photo__container-text">
               <div class="photo__description">
                 <p class="photo__title">Местная растительность</p>
@@ -105,7 +117,11 @@
         </div>
         <div class="photo-card">
           <figure class="photo__container">
-            <img class="photo__container-image" src="img/photo-roads-mobile@1x.jpg" alt="Дорога на север">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/photo-roads-desktop@1x.jpg 1x, img/photo-roads-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/photo-roads-tablet@1x.jpg 1x, img/photo-roads-tablet@2x.jpg 2x">
+              <img class="photo__container-image" src="img/photo-roads-mobile@1x.jpg" srcset="img/photo-roads-mobile@2x.jpg 2x" alt="Дорога на север">
+            </picture>
             <figcaption class="photo__container-text">
               <div class="photo__description">
                 <p class="photo__title">Дорога на север</p>
@@ -130,7 +146,11 @@
         </div>
         <div class="photo-card">
           <figure class="photo__container">
-            <img class="photo__container-image" src="img/photo-bridge-mobile@1x.jpg" alt="Мост дьявола">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.jpg 1x, img/photo-bridge-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/photo-bridge-tablet@1x.jpg 1x, img/photo-bridge-tablet@2x.jpg 2x">
+              <img class="photo__container-image" src="img/photo-bridge-mobile@1x.jpg" srcset="img/photo-bridge-mobile@2x.jpg 2x" alt="Мост дьявола">
+            </picture>
             <figcaption class="photo__container-text">
               <div class="photo__description">
                 <p class="photo__title">Мост дьявола</p>
@@ -164,7 +184,11 @@
           </p>
         </div>
         <div class="video__container">
-          <img class="video__image" src="img/video-mobile@1x.jpg" width="320" height="201" alt="Видеопрезентация">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
+            <img class="video__image" src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" width="320" height="201" alt="Видеопрезентация">
+          </picture>
           <div class="video__controls video__controls-panel">
             <div class="video__controls-scale">
               <button class="video__controls-pointer"></button>
