--- a/source/form.html
+++ b/source/form.html
@@ -62,11 +62,11 @@
             <h2 class="review-form__title review-form__title--name">Представьтесь:</h2>
               <p class="review-form__item">
                 <label class="review-form__label" for="name">Имя*:</label>
-                <input class="review-form__input" id="name" type="text" name="name" required>
+                <input class="review-form__input" id="name" type="text" name="name">
               </p>
               <p class="review-form__item">
                 <label class="review-form__label" for="surname">Фамилия*:</label>
-                <input class="review-form__input" id="surname" type="text" name="surname" required>
+                <input class="review-form__input" id="surname" type="text" name="surname">
               </p>
               <p class="review-form__item">
                 <label class="review-form__label" for="second-name">Отчество:</label>
@@ -201,6 +201,28 @@
         </a>
       </div>
     </footer>
+    <section class="page-modal page-modal__sent">
+      <div class="page-modal__text">
+        <h2 class="page-modal__title">Ваш отзыв отправлен!</h2>
+        <p class="page-modal__description">
+          Спасибо за ваше участие, ваш отзыв уже поступил к нам.
+          <br> В ближайшее время мы опубликуем его на сайте.
+        </p>
+      </div>
+      <div class="page-modal__wrapper page-modal__wrapper--sent">
+        <button class="page-modal__button button button__sent" type="button">Закрыть окно</button>
+      </div>
+    </section>
+    <section class="page-modal page-modal__error">
+        <div class="page-modal__text">
+          <h2 class="page-modal__title">Что-то пошло не так!</h2>
+          <p class="page-modal__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+        </div>
+        <div class="page-modal__wrapper">
+          <button class="page-modal__button button button__error" type="button">Ок</button>
+        </div>
+    </section>
+    <script src="js/script__form.js"></script>
     <script src="js/script__nav.js"></script>
   </body>
 </html>
