--- a/source/form.html
+++ b/source/form.html
@@ -201,25 +201,25 @@
         </a>
       </div>
     </footer>
-    <section class="page-modal page-modal__sent">
-      <div class="page-modal__text">
-        <h2 class="page-modal__title">Ваш отзыв отправлен!</h2>
-        <p class="page-modal__description">
-          Спасибо за ваше участие, ваш отзыв уже поступил к нам.
-          <br> В ближайшее время мы опубликуем его на сайте.
-        </p>
-      </div>
-      <div class="page-modal__wrapper page-modal__wrapper--sent">
-        <button class="page-modal__button button button__sent" type="button">Закрыть окно</button>
-      </div>
+    <section class="page-modal page-modal--sent">
+        <div class="page-modal__text">
+          <h2 class="page-modal__title">Ваш отзыв отправлен!</h2>
+          <p class="page-modal__description">
+            Спасибо за ваше участие, ваш отзыв уже поступил к нам.
+            <br> В ближайшее время мы опубликуем его на сайте.
+          </p>
+        </div>
+        <div class="page-modal__wrapper page-modal__wrapper--sent">
+          <button class="page-modal__button button button--sent" type="button">Закрыть окно</button>
+        </div>
     </section>
-    <section class="page-modal page-modal__error">
+    <section class="page-modal page-modal--error">
         <div class="page-modal__text">
           <h2 class="page-modal__title">Что-то пошло не так!</h2>
           <p class="page-modal__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
         </div>
         <div class="page-modal__wrapper">
-          <button class="page-modal__button button button__error" type="button">Ок</button>
+          <button class="page-modal__button button button--error" type="button">Ок</button>
         </div>
     </section>
     <script src="js/script__form.js"></script>
