--- a/source/form.html
+++ b/source/form.html
@@ -25,12 +25,12 @@
               Главная
             </a>
           </li>
-          <li class="main-nav__item">
+          <li class="main-nav__item main-nav__item--left">
             <a class="main-nav__item-link" href="photo.html">
               Фото и видео
             </a>
           </li>
-          <li class="main-nav__item main-nav__item--active">
+          <li class="main-nav__item main-nav__item--right main-nav__item--active">
             <a class="main-nav__item-link">
               Форма отзыва
             </a>
@@ -48,8 +48,8 @@
       <section class="top">
         <img class="top__image" src="img/text-sedona.svg">
       </section>
-      <section class="promo">
-        <h2 class="promo__title">
+      <section class="promo promo--review">
+        <h2 class="promo__title promo__title--review">
           Оставьте свой отзыв
         </h2>
         <p class="promo__description">
@@ -77,29 +77,26 @@
             <h2 class="review-form__title review-form__title--decorated">Контактная информация:</h2>
             <div class="review-form__wrapper review-form__wrapper--contacts">
               <p class="review-form__item review-form__item--contacts">
-                <label class="review-form__label" for="phone">Контактный телефон*:</label>
+                <label class="review-form__label review-form__label--contacts" for="phone">
+                  <span class="review-form__mobile">Контактный телефон*:</span>
+                  <span class="review-form__desktop">Телефон*:</span>
+                </label>
                 <span class="review-form__input-wrapper">
                   <input class="review-form__input" id="phone" type="tel" name="phone">
                   <button class="review-form__button review-form__button--contacts" type="button">
-                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.0" id="Layer_1" x="0px" y="0px" width="18px" height="18px" viewBox="0 0 18 18" enable-background="new 0 0 18 18" xml:space="preserve">
-                      <g id="Page-1">
-                        <g id="Icons-Communication" transform="translate(-85.000000, -126.000000)">
-                          <g id="phone" transform="translate(85.000000, 126.000000)">
-                            <path id="Shape" d="M3.6,7.8C5,10.6,7.4,12.9,10.2,14.4l2.2-2.2c0.3-0.3,0.699-0.4,1-0.2c1.1,0.4,2.3,0.6,3.6,0.6 c0.6,0,1,0.4,1,1V17c0,0.6-0.4,1-1,1C7.6,18,0,10.4,0,1c0-0.6,0.4-1,1-1h3.5c0.6,0,1,0.4,1,1c0,1.2,0.2,2.4,0.6,3.6 c0.1,0.3,0,0.7-0.2,1L3.6,7.8L3.6,7.8z"/>
-                          </g>
-                        </g>
-                      </g>
+                    <svg width="18px" height="18px">
+                      <use xlink:href="img/sprite.svg#icon-phone">
                     </svg>
                   </button>
                 </span>
               </p>
               <p class="review-form__item review-form__item--contacts">
-                <label class="review-form__label" for="mail">Электронная почта*:</label>
+                <label class="review-form__label review-form__label--contacts" for="mail">Электронная почта*:</label>
                 <span class="review-form__input-wrapper">
                   <input class="review-form__input" id="mail" type="email" name="mail">
                   <button class="review-form__button review-form__button--contacts" type="button">
-                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="16px" height="16px" viewBox="0 0 16 16" enable-background="new 0 0 16 16" xml:space="preserve">
-                      <path d="M8,10c-0.266,0-0.5-0.094-1-0.336L0,6v7c0,0.55,0.45,1,1,1h14c0.55,0,1-0.45,1-1V6L9,9.664C8.5,9.906,8.266,10,8,10z M15,2 H1C0.45,2,0,2.45,0,3v0.758l8,4.205l8-4.205V3C16,2.45,15.55,2,15,2z"/>
+                    <svg width="16px" height="16px">
+                      <use xlink:href="img/sprite.svg#icon-mail">
                     </svg>
                   </button>
                 </span>
@@ -123,7 +120,7 @@
               </li>
             </ul>
           </fieldset>
-          <fieldset class="review-form__fieldset">
+          <fieldset class="review-form__fieldset review-form__fieldset--sights">
             <h2 class="review-form__title review-form__title--decorated">Посещенные достопримечательности:</h2>
             <ul class="review-form__wrapper review-form__wrapper--sights">
               <li class="review-form__item review-form__item--sights">
@@ -144,9 +141,9 @@
               </li>
             </ul>
           </fieldset>
-          <fieldset class="review-form__fieldset">
-            <h2 class="review-form__title">Опишите свои эмоции:</h2>
-            <textarea class="review-form__area" name="review-text">Опишите подробно свои восторги</textarea>
+          <fieldset class="review-form__fieldset review-form__fieldset--emotions">
+            <h2 class="review-form__title review-form__title--emotions review-form__title--decorated">Опишите свои эмоции:</h2>
+            <textarea class="review-form__area" name="review-text">Опишите подробно все свои восторги</textarea>
           </fieldset>
           <div class="review-form__submit">
             <button class="review-form__button button" type="submit" aria-label="Отправить отзыв">Отправить отзыв</button>
@@ -163,28 +160,24 @@
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--twitter" href="#">
-              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.0" id="Layer_1" x="0px" y="0px" width="17.5px" height="14.663px" viewBox="0 0 17.5 14.663" enable-background="new 0 0 17.5 14.663" xml:space="preserve">
-                <g id="W6EeEF_1_">
-                  <g>
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M11.283,0.153c1.736-0.484,3.074,0.264,3.685,1.15 c0.694-0.225,1.372-0.47,2.072-0.69c-0.004,0.841-0.538,1.478-0.883,1.728C16.861,2.506,17.5,1.86,17.5,1.86 c-0.175,0.977-1.035,1.746-1.611,1.977C15.65,10.429,12.617,14.793,5.507,14.66c-0.538,0,0.077,0-0.46,0 c-0.422,0-4.29-0.45-5.047-1.843c2.341,0.192,4.011-0.412,4.835-1.15c-0.989-0.293-2.761-0.464-3.07-2.881 c0.362,0.105,0.583,0.223,1.228,0.117C1.757,8.067,0.385,7.366,0.461,5.218c0.294,0.319,1.1,0.523,1.381,0.461 c-0.725-0.235-2.03-3.281-0.921-4.836C2.794,2.655,4.769,4.364,8.29,4.528C8.506,2.288,9.461,0.788,11.283,0.153z"/>
-                  </g>
-                </g>
+              <svg width="17.5px" height="14.663px">
+                <use xlink:href="img/sprite.svg#icon-twitter">
               </svg>
               <span class="visually-hidden">Мы в Твиттере</span>
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--facebook" href="#">
-              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.0" id="Layer_1" x="0px" y="0px" width="8.672px" height="18.944px" viewBox="0 0 8.672 18.944" enable-background="new 0 0 8.672 18.944" xml:space="preserve">
-                <path d="M6.275,3.356c0.799,0,1.599,0,2.398,0c0-1.119,0-2.237,0-3.356c-0.959,0-1.92,0-2.878,0C2.656,0.181,1.54,2.387,1.948,6.114 H0v3.518h1.959c0,3.104,0,6.208,0,9.312c1.279,0,2.559,0,3.837,0c0-3.104,0-6.208,0-9.312h2.857V6.114H5.787 C5.765,5.069,5.75,3.709,6.275,3.356z"/>
+              <svg width="8.672px" height="18.944px">
+                <use xlink:href="img/sprite.svg#icon-facebook">
               </svg>
               <span class="visually-hidden">Мы в Фейсбуке</span>
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--youtube" href="#">
-              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.0" id="Layer_1" x="0px" y="0px" width="19.979px" height="14.015px" viewBox="0 0 19.979 14.015" enable-background="new 0 0 19.979 14.015" xml:space="preserve">
-                <path d="M17.145,0H2.835C1.275,0,0,1.275,0,2.835v8.345c0,1.56,1.275,2.835,2.835,2.835h14.31c1.56,0,2.835-1.275,2.835-2.835V2.835 C19.979,1.275,18.704,0,17.145,0z M7.036,10.392V3.623l6.769,3.384L7.036,10.392z"/>
+              <svg width="19.979px" height="14.015px">
+                <use xlink:href="img/sprite.svg#icon-youtube">
               </svg>
               <span class="visually-hidden">Мы на Youtube</span>
             </a>
@@ -194,8 +187,8 @@
       <div class="page-footer__copyright copyright">
         <p class="copyright__text">Разработано</p>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
-            <path d="M13.62,0.017L13.472,0L0,1.412v24.661l13.473,8.017l13.43-7.99l0.042-0.025V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 L13.494,5.23l-0.087,0.05l-0.088-0.056v0.109L1.925,12.118V3.147l11.548-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.014,1.415l5.904,3.513l-0.86,0.507l-5.03-2.992l-0.014,1.415l3.827,2.275l-0.782,0.523l-3.031-1.787 l-0.014,1.413l1.853,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.016,1.044L5.41,18.234L5.395,19.65 l7.979,4.795l0.018,1.076l-7.973-4.74l-0.013,1.414l8.021,4.822l0.046,0.025l8.143-4.872l-0.011-5.177l3.415-2.036v10.021 L13.472,31.85L1.925,24.979V15.127z"/>
+          <svg width="26.943px" height="34.09px">
+            <use xlink:href="img/sprite.svg#icon-academy">
           </svg>
           <span class="visually-hidden">HTML Academy</span>
         </a>
