--- a/source/form.html
+++ b/source/form.html
@@ -52,7 +52,7 @@
         <h2 class="promo__title promo__title--review">
           Оставьте свой отзыв
         </h2>
-        <p class="promo__description">
+        <p class="promo__description promo__description--review">
           Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещенных вами достопримечательностях
         </p>
       </section>
