--- a/source/form.html
+++ b/source/form.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
+    <link rel="preload" href="fonts/ptsans.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="fonts/ptsansbold.woff2" as="font" type="font/woff2" crossorigin>
     <link href="css/style.min.css" rel="stylesheet">
     <title>HTML Academy: Седона</title>
   </head>
@@ -47,7 +48,7 @@
     <main class="page-main">
       <h1 class="visually-hidden">Оставьте нам свой отзыв</h1>
       <section class="top">
-        <img class="top__image" src="img/text-sedona.svg">
+        <img class="top__image" src="img/text-sedona.svg" alt="Седона">
       </section>
       <section class="promo promo--review">
         <h2 class="promo__title promo__title--review">
@@ -84,7 +85,7 @@
                 </label>
                 <span class="review-form__input-wrapper">
                   <input class="review-form__input" id="phone" type="tel" name="phone">
-                  <button class="review-form__button review-form__button--contacts" type="button">
+                  <button class="review-form__button review-form__button--contacts" type="button" aria-label="Контактный телефон">
                     <svg width="18px" height="18px">
                       <use xlink:href="img/sprite.svg#icon-phone">
                     </svg>
@@ -95,7 +96,7 @@
                 <label class="review-form__label review-form__label--contacts" for="mail">Электронная почта*:</label>
                 <span class="review-form__input-wrapper">
                   <input class="review-form__input" id="mail" type="email" name="mail">
-                  <button class="review-form__button review-form__button--contacts" type="button">
+                  <button class="review-form__button review-form__button--contacts" type="button" aria-label="Электронная почта">
                     <svg width="16px" height="16px">
                       <use xlink:href="img/sprite.svg#icon-mail">
                     </svg>
@@ -144,7 +145,8 @@
           </fieldset>
           <fieldset class="review-form__fieldset review-form__fieldset--emotions">
             <h2 class="review-form__title review-form__title--emotions review-form__title--decorated">Опишите свои эмоции:</h2>
-            <textarea class="review-form__area" name="review-text">Опишите подробно все свои восторги</textarea>
+            <label class="visually-hidden" for="review-text">Поделитесь с нами:</label>
+            <textarea class="review-form__area" name="review-text" id="review-text">Опишите подробно все свои восторги</textarea>
           </fieldset>
           <div class="review-form__submit">
             <button class="review-form__button button" type="submit" aria-label="Отправить отзыв">Отправить отзыв</button>
