--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
+    <link rel="preload" href="fonts/ptsans.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="fonts/ptsansbold.woff2" as="font" type="font/woff2" crossorigin>
     <link href="css/style.min.css" rel="stylesheet">
     <title>HTML Academy: Седона</title>
   </head>
@@ -48,7 +49,7 @@
       <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
       <section class="intro">
         <h2 class="visually-hidden">Welcome to the gorgeous Sedona!</h2>
-        <img class="intro__image" src="img/text-sedona-index.svg">
+        <img class="intro__image" src="img/text-sedona-index.svg" alt="Добро пожаловать в Седону!">
       </section>
       <section class="promo">
         <p class="promo__title">
@@ -155,7 +156,7 @@
       <section class="map">
         <h2 class="visually-hidden">Где мы находимся?</h2>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d88105.32793956435!2d-111.81257311841277!3d34.85035124154711!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2sSedona%2C%20AZ%2086336%2C%20USA!5e0!3m2!1sen!2sru!4v1599848823062!5m2!1sen!2sru" width="100%" height="350px" frameborder="0" style="display: block;
-        border: 0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        border: 0;" allowfullscreen="" aria-hidden="false" tabindex="0" title="Карта Седоны"></iframe>
       </section>
     </main>
     <footer class="page-footer">
