--- a/source/form.html
+++ b/source/form.html
@@ -87,7 +87,7 @@
                   <input class="review-form__input" id="phone" type="tel" name="phone">
                   <button class="review-form__button review-form__button--contacts" type="button" aria-label="Контактный телефон">
                     <svg width="18px" height="18px">
-                      <use xlink:href="img/sprite.svg#icon-phone">
+                      <use xlink:href="img/sprite.svg#icon-phone"></use>
                     </svg>
                   </button>
                 </span>
@@ -98,7 +98,7 @@
                   <input class="review-form__input" id="mail" type="email" name="mail">
                   <button class="review-form__button review-form__button--contacts" type="button" aria-label="Электронная почта">
                     <svg width="16px" height="16px">
-                      <use xlink:href="img/sprite.svg#icon-mail">
+                      <use xlink:href="img/sprite.svg#icon-mail"></use>
                     </svg>
                   </button>
                 </span>
@@ -164,7 +164,7 @@
           <li class="social__item">
             <a class="social__link social__link--twitter" href="#">
               <svg width="17.5px" height="14.663px">
-                <use xlink:href="img/sprite.svg#icon-twitter">
+                <use xlink:href="img/sprite.svg#icon-twitter"></use>
               </svg>
               <span class="visually-hidden">Мы в Твиттере</span>
             </a>
@@ -172,7 +172,7 @@
           <li class="social__item">
             <a class="social__link social__link--facebook" href="#">
               <svg width="8.672px" height="18.944px">
-                <use xlink:href="img/sprite.svg#icon-facebook">
+                <use xlink:href="img/sprite.svg#icon-facebook"></use>
               </svg>
               <span class="visually-hidden">Мы в Фейсбуке</span>
             </a>
@@ -180,7 +180,7 @@
           <li class="social__item">
             <a class="social__link social__link--youtube" href="#">
               <svg width="19.979px" height="14.015px">
-                <use xlink:href="img/sprite.svg#icon-youtube">
+                <use xlink:href="img/sprite.svg#icon-youtube"></use>
               </svg>
               <span class="visually-hidden">Мы на Youtube</span>
             </a>
@@ -191,7 +191,7 @@
         <p class="copyright__text">Разработано</p>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <svg width="26.943px" height="34.09px">
-            <use xlink:href="img/sprite.svg#icon-academy">
+            <use xlink:href="img/sprite.svg#icon-academy"></use>
           </svg>
           <span class="visually-hidden">HTML Academy</span>
         </a>
