--- a/source/index.html
+++ b/source/index.html
@@ -155,8 +155,7 @@
       </section>
       <section class="map">
         <h2 class="visually-hidden">Где мы находимся?</h2>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d88105.32793956435!2d-111.81257311841277!3d34.85035124154711!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2sSedona%2C%20AZ%2086336%2C%20USA!5e0!3m2!1sen!2sru!4v1599848823062!5m2!1sen!2sru" width="100%" height="350px" frameborder="0" style="display: block;
-        border: 0;" allowfullscreen="" aria-hidden="false" tabindex="0" title="Карта Седоны"></iframe>
+        <iframe class="map__frame" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d88105.32793956435!2d-111.81257311841277!3d34.85035124154711!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2sSedona%2C%20AZ%2086336%2C%20USA!5e0!3m2!1sen!2sru!4v1599848823062!5m2!1sen!2sru" allowfullscreen="" aria-hidden="false" tabindex="0" title="Карта Седоны"></iframe>
       </section>
     </main>
     <footer class="page-footer">
@@ -168,7 +167,7 @@
           <li class="social__item">
             <a class="social__link social__link--twitter" href="#">
               <svg width="17.5px" height="14.663px">
-                <use xlink:href="img/sprite.svg#icon-twitter">
+                <use xlink:href="img/sprite.svg#icon-twitter"></use>
               </svg>
               <span class="visually-hidden">Мы в Твиттере</span>
             </a>
@@ -176,7 +175,7 @@
           <li class="social__item">
             <a class="social__link social__link--facebook" href="#">
               <svg width="8.672px" height="18.944px">
-                <use xlink:href="img/sprite.svg#icon-facebook">
+                <use xlink:href="img/sprite.svg#icon-facebook"></use>
               </svg>
               <span class="visually-hidden">Мы в Фейсбуке</span>
             </a>
@@ -184,7 +183,7 @@
           <li class="social__item">
             <a class="social__link social__link--youtube" href="#">
               <svg width="19.979px" height="14.015px">
-                <use xlink:href="img/sprite.svg#icon-youtube">
+                <use xlink:href="img/sprite.svg#icon-youtube"></use>
               </svg>
               <span class="visually-hidden">Мы на Youtube</span>
             </a>
@@ -195,7 +194,7 @@
         <p class="copyright__text">Разработано</p>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <svg width="26.943px" height="34.09px">
-            <use xlink:href="img/sprite.svg#icon-academy">
+            <use xlink:href="img/sprite.svg#icon-academy"></use>
           </svg>
           <span class="visually-hidden">HTML Academy</span>
         </a>
